# libmelon

./: .gitignore  CMakeLists.txt  README.md  actor.c  actor_system.h  contributors.txt  fifo.c  fifo.h  logging.h  main.c  thread_pool.c  thread_pool.h  threads.c  threads.h
include/: actor.h  actor_system.h  fifo.h  logger.h  logging.h  melon.h  message.h  promise.h  thread_pool.h  threads.h
src/: actor.c  actor_system.c  fifo.c  logger.c  main.c  message.c  promise.c  thread_pool.c  threads.c
tests/: main.c
